# sql-optimizer-agent

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
gorm-parser/: go.mod  main.go
gorm-parser/parser/: ast_walker.go  ast_walker_test.go  gorm_extractor.go  n1_detector.go  n1_detector_test.go  sql_emitter.go
gorm-parser/testdata/: n1_test.go  sample.go
src/agents/: bottleneck.py  optimizer.py  profiler.py  schema_analyzer.py  test_schema_analyzer.py
src/models/: optimization.py  query_analysis.py
src/orchestrator/: graph.py  state.py
src/tools/: db_connector.py  gorm_parser.py  gorm_to_sql.py  schema_reader.py  sql_parser.py
test-db/: bad_queries.sql  docker-compose.yml  schema.sql  seed_data.sql
tests/: test_db_connector.py  test_profiler.py  test_sql_parser.py
