[project]
name = "sql-optimizer-agent"
version = "0.1.0"
description = "Scaffold for a SQL optimizer agent"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langgraph",
    "pydantic",
    "psycopg[binary]",
    "sqlglot",
    "typer",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
